--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "aircodes": "^1.3.16",
     "chart.js": "^4.4.2",
+    "city-timezones": "^1.2.1",
+    "date-fns-tz": "^2.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
