--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "aircodes": "^1.3.16",
     "chart.js": "^4.4.2",
     "city-timezones": "^1.2.1",
+    "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
